# ig-primon-t1

./: .gitignore  CBP_WOLFCAMP_STRUCTURAL_EDGE_prereg_v0_1.md  GATE_KERNEL.md  IGVF_VALUE_ALGORITHM.md  IG_PRIMON_SLT_BRIDGE_paper_sketch.md  MCP_OPERATING_MANUAL.md  MCP_SERVER_SPEC_drilling_ops_v0_1.md  MCP_SERVER_SPEC_oilfield_legal_v0_1.md  Makefile  PHASE1_protocol_genuine_branch_placement_v0_1.md  PREREGISTRATION_genuine_branch_placement_v0_1.md  PREREGISTRATION_ridge_kinematic_transfer_v0_1.md  README.md  STAGE1_2_RESULTS.md  T1_HE2_amendment_v0_5.md  T1_KNOWLEDGE_MAP.md  T1_adversarial_audit_v0_1.md  T1_consolidated_results_ledger_v0_1.md  T1_consolidated_results_ledger_v0_2.md  T1_consolidated_results_ledger_v0_3.md  T1_consolidated_results_ledger_v0_4.md  T1_genuine_side_singularity_gate_v0_1.md  T1_hw_optimization_doctrine_v0_1.md  T1_lemma_E1_proof_v0_1.md  T1_lemma_E1_proof_v0_2.md  T1_moduleC_universality_theorem_v0_1.md  T1_moduleL_hw_gate_v0_1.md  T1_moduleL_perceptron_gate_v0_1.md  T1_note_hagedorn_li_v0_1.tex  T1_precision_map_v0_1.md  T1_precision_map_v0_2.md  T1_preregistration_v0_5.md  T1_preregistration_v0_6.md  T1_resultC_amendment_v0_4.md  T1_resultC_amendment_v0_5.md  TOSCO_4RR_FULL_REPORT.md  TOSCO_4RR_PRODUCTION_PROBABILITY.md  _bakeoff_stdout.txt  allocator_bakeoff.py  audit_independent.py  (+161 more)
cbp_wolfcamp/: FINDINGS.md  VALOR_EMPIRE_ROLLOUT.md  VALOR_INTELLIGENCE_DOSSIER.md  VALOR_PROSPECTS_ANALYSIS.md  andrews_perfs_tops.py  andrews_structure.py  andrews_tops.py  basin_position_results.txt  build_master.py  cbp_coords.py  cbp_full_model.py  cbp_perfs_tops.py  cbp_production.py  cbp_setup.py  cbp_value_test.py  cross_well_table.py  decline_cca.py  dlis_read.py  isopach_wringer_results.txt  join_diag.py  kgs_analyze.py  kgs_basin_position.py  kgs_isopach_wringer.py  kgs_maturity.py  kgs_pipeline.py  kgs_prod_agg.py  kgs_stratcontrast.py  kgs_structure.py  kgs_trapstyle.py  (+47 more)
(+297 files in other folders)
